--- a/src/daisoi/theme/theme/home.html
+++ b/src/daisoi/theme/theme/home.html
@@ -155,20 +155,23 @@
                 <div id="site-content" class="site-content clearfix">
                     <div id="inner-content" class="inner-content-wrap">
                        <div class="page-content">
-                           <!-- content-container-->
-                           <div class="container">
-                             <div class="row">
-                               <div id="column1-container">
-                               </div>
-                               <div id="content-container">
-                               </div>
-                               <div id="column2-container">
-                               </div>
-                               <div class="col-sm-9 col-xs-12 themesflat-pagination clearfix no-border padding-top-17">
-                               </div>
-                             </div>
-                           </div>
-                           <!-- content-container-end -->
+                            <!-- index -->
+                            <div id="content-index"></div>
+
+                            <!-- content-container-->
+                            <div class="container">
+                              <div class="row">
+                                <div id="column1-container">
+                                </div>
+                                <div id="content-container">
+                                </div>
+                                <div id="column2-container">
+                                </div>
+                                <div class="col-sm-9 col-xs-12 themesflat-pagination clearfix no-border">
+                                </div>
+                              </div>
+                            </div>
+                            <!-- content-container-end -->
 
                             <!-- PARTNER -->
                             <div class="row-partner">
@@ -205,6 +208,7 @@
 <script src="assets/js/owl.carousel2.thumbs.js"></script>
 
 <script src="assets/js/jquery.cookie.js"></script>
+<script src="assets/js/jquery.colorbox-min.js"></script>
 <script src="assets/js/gmap3.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIEU6OT3xqCksCetQeNLIPps6-AYrhq-s&region=GB"></script>
 <script src="assets/js/shortcodes.js"></script>
