--- a/src/daisoi/theme/theme/home.html
+++ b/src/daisoi/theme/theme/home.html
@@ -14,6 +14,7 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/colorbox.css">
 
     <!-- Colors -->
     <link rel="stylesheet" type="text/css" href="assets/css/colors/color1.css" id="colors">
