--- a/src/daisoi/theme/theme/home.html
+++ b/src/daisoi/theme/theme/home.html
@@ -15,6 +15,7 @@
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/colorbox.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/jquery.fancybox.min.css">
 
     <!-- Colors -->
     <link rel="stylesheet" type="text/css" href="assets/css/colors/color1.css" id="colors">
@@ -165,11 +166,12 @@
                                 <div id="column1-container">
                                 </div>
                                 <div id="content-container">
+
                                 </div>
                                 <div id="column2-container">
                                 </div>
-                                <div class="col-sm-9 col-xs-12 themesflat-pagination clearfix no-border">
                                 </div>
+                                <div id="themesflat-pagination" class="themesflat-pagination clearfix no-border">
                               </div>
                             </div>
                             <!-- content-container-end -->
@@ -209,7 +211,8 @@
 <script src="assets/js/owl.carousel2.thumbs.js"></script>
 
 <script src="assets/js/jquery.cookie.js"></script>
-<script src="assets/js/jquery.colorbox-min.js"></script>
+<script src="assets/js/lazyload.js"></script>
+<script src="assets/js/jquery.fancybox.min.js"></script>
 <script src="assets/js/gmap3.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIEU6OT3xqCksCetQeNLIPps6-AYrhq-s&region=GB"></script>
 <script src="assets/js/shortcodes.js"></script>
