--- a/src/daisoi/theme/theme/home.html
+++ b/src/daisoi/theme/theme/home.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/colors/color1.css" id="colors">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="assets/icon/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/icon/apple-touch-icon-158-precomposed.png">
+    <link rel="shortcut icon" href="assets/icon/daisoi-icon.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/icon/daisoi-icon.png">
 
     <!--[if lt IE 9]>
         <script src="javascript/html5shiv.js"></script>
@@ -197,7 +197,7 @@
     </div><!-- /#page -->
 </div><!-- /#wrapper -->
 
-<a id="scroll-top"></a>
+<a id="scroll-top" style="cursor: pointer !important;"></a>
 
 <!-- Javascript -->
 <script src="assets/js/jquery.min.js"></script>
