--- a/src/daisoi/theme/theme/home.html
+++ b/src/daisoi/theme/theme/home.html
@@ -233,6 +233,65 @@
 <script src="includes/rev-slider/js/extensions/revolution.extension.slideanims.min.js"></script>
 <script src="includes/rev-slider/js/extensions/revolution.extension.video.min.js"></script>
 
+<!-- tongwen -->
+<script type="text/javascript" src="assets/js/tongwen.js"></script>
+
+
+<!-- 繁簡轉換 -->
+<script>
+$(document).ready(function(){
+  $(function() {
+      var lang = getCookie('lang');
+      if(lang == 'tw'){
+          TongWen.trans2Trad(document);
+      }else{
+          TongWen.trans2Simp(document);
+      }
+  });
+
+  $("#portaltab-s2t").click(function(){
+      var lang = getCookie('lang');
+      if(lang == 'tw'){
+          setCookie('lang', 'cn');
+          TongWen.trans2Simp(document);
+      }else{
+          setCookie('lang', 'tw');
+          TongWen.trans2Trad(document);
+      }
+  });
+
+  function toTradChinese(obj) {
+      return TongWen.convert(obj, 'traditional');
+  }
+
+  function toSimpChinese(obj) {
+      return TongWen.convert(obj, 'simplified');
+  }
+
+  function setCookie(cname, cvalue, exdays) {
+      var d = new Date();
+      d.setTime(d.getTime() + (exdays*24*60*60*1000));
+      var expires = "expires="+ d.toUTCString();
+      document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+  }
+
+  function getCookie(cname) {
+      var name = cname + "=";
+      var ca = document.cookie.split(';');
+      for(var i = 0; i <ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0) == ' ') {
+              c = c.substring(1);
+          }
+          if (c.indexOf(name) == 0) {
+              return c.substring(name.length, c.length);
+          }
+      }
+      return "tw";
+  }
+});
+</script>
+
 </body>
 </html>
 
