--- a/src/daisoi/theme/theme/home.html
+++ b/src/daisoi/theme/theme/home.html
@@ -240,6 +240,12 @@
 <!-- 繁簡轉換 -->
 <script>
 $(document).ready(function(){
+
+  // 使 a tag 無效
+  $("#portaltab-s2t a").click(function(event){
+    event.preventDefault();
+  });
+
   $(function() {
       var lang = getCookie('lang');
       if(lang == 'tw'){
